@@ -108,6 +108,11 @@ public class FileRepository implements IRemoteRepository2 {
     }
 
     @Override
+    public File getLocalDirectory() {
+        return baseDirectory;
+    }
+
+    @Override
     public String commit(String[] onVersions, String comment) throws Exception {
         Log.logDebug(LOGGER, "Commit not supported for File repositories.");
 
