@@ -337,7 +337,7 @@ public final class ProjectUICommands {
 
                 RemoteRepositoryProvider remoteRepositoryProvider = new RemoteRepositoryProvider(projectRoot,
                         repos);
-                remoteRepositoryProvider.switchAllToLatest();
+                remoteRepositoryProvider.switchAllToLatestAndPropagateDeletes();
                 for (String file : new String[] { OConsts.FILE_PROJECT,
                         OConsts.DEFAULT_INTERNAL + '/' + FilterMaster.FILE_FILTERS,
                         OConsts.DEFAULT_INTERNAL + '/' + SRX.CONF_SENTSEG }) {
@@ -481,9 +481,8 @@ public final class ProjectUICommands {
                             mainWindow.showStatusMessageRB("TEAM_OPEN");
                             try {
                                 RemoteRepositoryProvider remoteRepositoryProvider = 
-                                        new RemoteRepositoryProvider(props.getProjectRootDir(),
-                                        props.getRepositories());
-                                remoteRepositoryProvider.switchToVersion(OConsts.FILE_PROJECT, null);
+                                        new RemoteRepositoryProvider(props.getProjectRootDir(), props.getRepositories(), props);
+                                remoteRepositoryProvider.switchToVersionAndPropagateDeletes(OConsts.FILE_PROJECT, null);
                                 restoreOnFail = FileUtil.backupFile(projectFile);
                                 // Overwrite omegat.project
                                 remoteRepositoryProvider.copyFilesFromRepoToProject(OConsts.FILE_PROJECT);
